# wt_datamine_extractor

./: .gitignore  Cargo.toml  LICENSE  README.md  all.json  japan_datatable.csv  test.html  useful_scripts.md
.github/workflows/: datamine_update.yml  test.yml
assets/: autopull.sh
atgm/: air_known.json  known.json
battle_rating/: all.csv  all.json
bombs/: all.json  known.json
bombs/index/: bomb_de_375mm_erika.blkx  bomb_mark36_srboc_launcher.blkx  bomb_uk_107mm_17.blkx  bomb_uk_hedgehog.blkx  bomb_uk_limbo.blkx  bomb_uk_mk4.blkx  bomb_us_t37.blkx  bomb_ussr_82mm_o_832.blkx  bomb_ussr_mbu600.blkx  bomb_ussr_rbm.blkx  bomb_ussr_rgb12.blkx  bomb_ussr_rgb25.blkx  bomb_ussr_rgb60.blkx  bomb_ussr_rku36u.blkx  china_250kg_mk_82.blkx  cn_gp_250_3.blkx  cn_gp_500_3.blkx  cn_ls_500j.blkx  cn_ts_250.blkx  de_250_matra_25e.blkx  de_flam_250.blkx  de_flam_500.blkx  de_fx1400.blkx  de_sc1000.blkx  de_sc1800b.blkx  de_sc250.blkx  de_sc2500.blkx  de_sc250_87.blkx  de_sc50.blkx  de_sc500.blkx  de_sc500_87.blkx  de_sd10a.blkx  de_sd50.blkx  de_sd70.blkx  de_sd_10a.blkx  depth_charge_de_wbd.blkx  depth_charge_de_wbf.blkx  depth_charge_de_wbg.blkx  depth_charge_de_wbg_mortar.blkx  depth_charge_it_btg.blkx  (+212 more)
custom_loadouts/: all.json  known.json
explosive/: explosive.blkx
index/: all.json  known.json
lang/: _common_languages.csv  _keyboard.csv  _legal.csv  _missing.csv  _online.csv  benchmark.csv  controls.csv  encyclopedia.csv  encyclopedia_tips.csv  localization.blk  localization.blkx  matching.csv  menu.csv  menu_chat.csv  menu_clan.csv  menu_debriefing.csv  menu_discount_description.csv  menu_events.csv  menu_multiplayer.csv  menu_options.csv  missions_briefing.csv  missions_campaign.csv  missions_chapters.csv  missions_debriefings.csv  missions_dynamic.csv  missions_hints.csv  missions_locations.csv  missions_objectives.csv  missions_single.csv  missions_training.csv  missions_tutorial.csv  missions_versus.csv  pc_uimessages.csv  ps4_specific.csv  ps5_specific.csv  shop.csv  speech_coral_sea.csv  speech_tutorial.csv  speech_video.csv  speech_wake_island.csv  (+15 more)
missile_index/: all.json  known.json
missile_index/missiles/: atam_mistral.blkx  cn_pf10.blkx  cn_ty_90.blkx  fr_matra_super_530d.blkx  fr_matra_super_530f.blkx  fr_r_511_matra.blkx  fr_r_530_matra_ir.blkx  fr_r_530_matra_radar.blkx  fr_r_550_magic.blkx  fr_r_550_magic_2.blkx  il_pyton_3.blkx  il_shafrir_1.blkx  il_shafrir_2.blkx  il_shafrir_2_default.blkx  it_aspide_1a.blkx  su_9m336.blkx  su_9m39.blkx  su_pf_10.blkx  su_pl2.blkx  su_pl2_default.blkx  su_pl5b.blkx  su_pl5b_default.blkx  su_pl7.blkx  su_pl8.blkx  su_r_13m.blkx  su_r_13m1.blkx  su_r_23r.blkx  su_r_23t.blkx  su_r_24r.blkx  su_r_24t.blkx  su_r_27er.blkx  su_r_27er1.blkx  su_r_27et.blkx  su_r_27r.blkx  su_r_27r1.blkx  su_r_27t.blkx  su_r_27t1.blkx  su_r_3r.blkx  su_r_3s.blkx  su_r_3s_default.blkx  (+44 more)
shell_index/: all.json  blacklist.json  compressed.json  known.json
src/: extract.rs  html_gen.rs  main.rs  missiles.rs
thermal_index/: all.json  known.json
(+1028 files in other folders)
