[package]
name = "wt_datamine_extractor"
version = "0.4.0"
edition = "2021"

[lib]
name = "wt_datamine_extractor_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "wt_datamine_extractor_bin"
path = "src/bin/main.rs"

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
opt-level = 3 # Opt 3 seems to have the best compile/run ratio

# Debug data is very useful even when running fast during work
debug = true
debug-assertions = true
overflow-checks = true

lto = false # Tested it, seems the best ratio

# Just good for compile times
incremental = true
codegen-units = 256
rpath = false

[dependencies]
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
lazy_static = "1.4.*"
strum = "0.23.*"
strum_macros = "0.23.*"
wt_csv = "0.8.0"
fs_extra = "1.2.0"
const-gen = "^1.1.0"
get-size = { version = "^0.1", features = ["derive"] }